...
        <item
            android:id="@+id/nav_buddies"
            android:icon="@drawable/ic_buddies"
            android:title="@string/buddies" />

        <item
            android:id="@+id/nav_discounts"
            android:icon="@drawable/ic_discounts"
            android:title="@string/discounts" />
    </group>

    <item android:title="@string/utilities">
        <menu>
...
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings"/>

            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_sign_out"
                android:title="@string/sign_out" />
        </menu>
    </item>


...
