...
        android:layout_centerInParent="true"
        android:textSize="20sp"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/recycler_view_discounts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_navigation"
        android:layout_below="@+id/device_location"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/md_keylines"
...
