...
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="start"
            />

        <Button
            android:id="@+id/txtCheckoutSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="end"
            android:background="#4CAF50"
...
    </GridLayout>
    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/recycler_view_also_checked_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:scrollbars="vertical"
...
