<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/report_misuse"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="appdev.playover.ReportMisuse_Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/misuse_username"
            android:layout_marginTop="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            />

        <EditText
            android:layout_marginTop="70dp"
            android:id="@+id/misuse_report"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textCapSentences|textMultiLine"
            android:lines="10"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@android:drawable/edit_text"
            android:hint="@string/misuse_report" />

        <Button
            android:id="@+id/submitReportBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="#4CAF50"
            android:text="@string/submitReport"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:visibility="visible"/>


    </LinearLayout>
</ScrollView>